NGSTACK-703 - remove yellow shade on nav toggle, close searchbox when main nav is opened, fix search input style on safari

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -113,6 +113,8 @@ $header-bg: $white;
         background: transparent;
         border: 0;
         border-bottom: 2px solid $black;
+        appearance: none;
+        border-radius: 0;
         &:focus {
             outline: none;
         }
